cambios en los filtros de las rutas

--- a/bikeBros/src/app/components/box-comments/box-comments.component.html
+++ b/bikeBros/src/app/components/box-comments/box-comments.component.html
@@ -19,8 +19,8 @@
           "
           color="danger"
           (click)="deleteComment(comment._id)"
-          >Eliminar</ion-button
-        >
+          ><ion-icon name="trash-outline"></ion-icon
+        ></ion-button>
       </ion-label>
     </ion-item>
   </ion-list>
