--- a/bikeBros/src/app/components/register-route-modal/register-route-modal.component.html
+++ b/bikeBros/src/app/components/register-route-modal/register-route-modal.component.html
@@ -13,7 +13,7 @@
   <form [formGroup]="routeForm" (ngSubmit)="submitForm()">
     <ion-item>
       <ion-label position="floating">Nombre de la ruta</ion-label>
-      <ion-input formControlName="name" maxlength="30"></ion-input>
+      <ion-input formControlName="name" maxlength="50"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Nivel de dificultad</ion-label>
@@ -75,7 +75,7 @@
     <ion-item>
       <ion-label>Imágenes</ion-label>
       <label for="file-upload">
-        <ion-icon name="cloud-upload"></ion-icon>
+        <ion-icon name="images-outline"></ion-icon>
       </label>
       <input
         id="file-upload"
