--- a/bikeBros/src/app/pages/main/edit-profile/edit-profile.page.html
+++ b/bikeBros/src/app/pages/main/edit-profile/edit-profile.page.html
@@ -35,7 +35,7 @@
     <ion-item>
       <ion-label>Imágen de perfil</ion-label>
       <label for="file-upload">
-        <ion-icon name="cloud-upload"></ion-icon>
+        <ion-icon name="images-outline"></ion-icon>
       </label>
       <input
         id="file-upload"
