--- a/bikeBros/src/app/components/event-list/event-list.component.scss
+++ b/bikeBros/src/app/components/event-list/event-list.component.scss
@@ -35,3 +35,14 @@
   z-index: 1;
   margin-top: 70px;
 }
+
+.ubicacion-centrado {
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.ubicacion-completa {
+  white-space: normal;
+}
