--- a/bikeBros/src/app/pages/event/event.page.html
+++ b/bikeBros/src/app/pages/event/event.page.html
@@ -54,11 +54,12 @@
       </ion-item>
       <ion-list *ngIf="showParticipants">
         <ion-item *ngFor="let participante of currentEvent?.participantes">
-          <ion-label
+          <ion-label>{{ participante.nick }}</ion-label>
+          <ion-icon
+            name="eye-outline"
             (click)="setIdUser(participante._id)"
             (click)="checkUser(participante._id)"
-            >{{ participante.nick }}</ion-label
-          >
+          ></ion-icon>
         </ion-item>
       </ion-list>
     </ion-card>
