--- a/bikeBros/src/app/components/message-full/message-full.component.html
+++ b/bikeBros/src/app/components/message-full/message-full.component.html
@@ -13,9 +13,8 @@
       <p>{{ mensajeCompleto }}</p>
     </ion-card-content>
   </ion-card>
-  <!-- <app-input-message></app-input-message> --><ion-button
-    (click)="goSenderProfile(senderId)"
-    expand="block"
+  <!-- <app-input-message></app-input-message> -->
+  <ion-button (click)="goSenderProfile(senderId)" expand="block"
     >Ir perfil</ion-button
   >
 </ion-content>
