--- a/bikeBros/src/app/components/register-event-modal/register-event-modal.component.html
+++ b/bikeBros/src/app/components/register-event-modal/register-event-modal.component.html
@@ -30,6 +30,7 @@
           formControlName="rutaId"
           aria-label="fruit"
           placeholder="Selecciona una ruta"
+          style="width: 100%"
         >
           <ion-select-option
             *ngFor="let route of routes"
