--- a/bikeBros/src/app/pages/event/event.page.html
+++ b/bikeBros/src/app/pages/event/event.page.html
@@ -17,7 +17,7 @@
       </ion-slide>
     </ion-slides>
 
-    <ion-card-title class="title">
+    <ion-card-title class="title" aria-label="fruit">
       {{ currentEvent?.ruta?.name }}
     </ion-card-title>
     <div class="main-info">
