--- a/bikeBros/src/app/components/event-list/event-list.component.scss
+++ b/bikeBros/src/app/components/event-list/event-list.component.scss
@@ -13,13 +13,24 @@
   justify-content: center;
   // gap: 5px;
 }
+.image-container {
+  width: 100%;
+  padding-bottom: 75%; /* Establece una proporción de 4:3 para las imágenes */
+  position: relative;
+  overflow: hidden;
+}
 
+.img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ajusta la imagen al contenedor sin deformarla */
+}
 .icon {
   font-size: 30px;
   margin-right: 5px;
-}
-.image-container {
-  max-height: 300px;
 }
 
 .floating-toolbar {
