--- a/bikeBros/src/app/components/register-event-modal/register-event-modal.component.html
+++ b/bikeBros/src/app/components/register-event-modal/register-event-modal.component.html
@@ -25,9 +25,10 @@
     </ion-item> -->
     <ion-list>
       <ion-item>
-        <!-- <ion-label>Ruta</ion-label> -->
+        <ion-label>Ruta</ion-label>
         <ion-select
           formControlName="rutaId"
+          interface="action-sheet"
           aria-label="fruit"
           placeholder="Selecciona una ruta"
           style="width: 100%"
