--- a/bikeBros/src/app/components/box-messages/box-messages.component.html
+++ b/bikeBros/src/app/components/box-messages/box-messages.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title> Mensajes recibidos </ion-title>
+    <ion-title>Mensajes recibidos</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="closeModal()">
         <ion-icon slot="icon-only" name="close"></ion-icon>
@@ -10,18 +10,28 @@
 </ion-header>
 <ion-content>
   <ion-card>
-    <ion-list *ngIf="messages?.length">
+    <ion-list *ngIf="mensajesAgrupados?.length">
       <ion-item
-        *ngFor="let message of messages"
+        *ngFor="let message of mensajesAgrupados"
         class="item"
-        (click)="openMessage(message._id)"
+        (click)="
+          openMessageList(
+            message.recipient._id,
+            message.sender._id,
+            message._id
+          )
+        "
       >
-        <ion-avatar>
+        <!-- <ion-avatar>
           <img [src]="message?.sender?.imageURL[0]" />
-        </ion-avatar>
+        </ion-avatar> -->
 
         <!-- <ion-label>{{ message?.sender?.nick }}</ion-label> -->
-        <ion-label>{{ truncateContent(message?.content) }}</ion-label>
+
+        <ion-label>
+          <p>{{ message.sender.nick }}</p>
+          <h2>{{ truncateContent(message?.content) }}</h2>
+        </ion-label>
 
         <!-- <ion-button
           color="danger"
@@ -32,7 +42,10 @@
       </ion-item>
     </ion-list>
 
-    <div class="noreports" *ngIf="!messages || messages.length === 0">
+    <div
+      class="noreports"
+      *ngIf="!mensajesAgrupados || mensajesAgrupados.length === 0"
+    >
       <p>No tienes mensajes.</p>
     </div>
   </ion-card>
