--- a/bikeBros/src/app/components/joined-events-list/joined-events-list.component.scss
+++ b/bikeBros/src/app/components/joined-events-list/joined-events-list.component.scss
@@ -19,3 +19,30 @@
   font-size: 30px;
   margin-right: 5px;
 }
+
+.image-container {
+  width: 100%;
+  padding-bottom: 75%; /* Establece una proporción de 4:3 para las imágenes */
+  position: relative;
+  overflow: hidden;
+}
+
+.img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ajusta la imagen al contenedor sin deformarla */
+}
+
+.cancelled-event {
+  padding-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  font-size: 40px;
+  font-weight: bold;
+  color: #e0ac08;
+}
