--- a/bikeBros/src/app/components/report-route-list/report-route-list.component.html
+++ b/bikeBros/src/app/components/report-route-list/report-route-list.component.html
@@ -19,7 +19,7 @@
         <ion-label text-wrap>
           <h2>{{ report?.reason }}</h2>
           <p>{{ report?.description }}</p>
-          <p>ID: {{ report._id }}</p>
+          <!-- <p>ID: {{ report._id }}</p> -->
           <ion-button color="danger" (click)="deleteRouteReport(report._id)"
             >Eliminar</ion-button
           >
