--- a/bikeBros/src/app/components/route-list/route-list.component.scss
+++ b/bikeBros/src/app/components/route-list/route-list.component.scss
@@ -4,14 +4,20 @@
   align-items: center;
 }
 
-.img-container {
-  width: 60%;
-  max-height: 300px;
+.image-container {
+  width: 100%;
+  padding-bottom: 75%; /* Establece una proporción de 4:3 para las imágenes */
+  position: relative;
+  overflow: hidden;
 }
 
-.img-container img {
+.img {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 125px;
+  height: 100%;
+  object-fit: cover; /* Ajusta la imagen al contenedor sin deformarla */
 }
 
 .info-container {
@@ -49,21 +55,21 @@
   // border: 1px solid red;
 }
 
-.image-container {
-  width: 100%;
-  padding-bottom: 75%; /* Establece una proporción de 4:3 para las imágenes */
-  position: relative;
-  overflow: hidden;
-}
+// .image-container {
+//   width: 100%;
+//   padding-bottom: 75%; /* Establece una proporción de 4:3 para las imágenes */
+//   position: relative;
+//   overflow: hidden;
+// }
 
-.img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover; /* Ajusta la imagen al contenedor sin deformarla */
-}
+// .img {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   object-fit: cover; /* Ajusta la imagen al contenedor sin deformarla */
+// }
 
 .slide-button {
   position: absolute;
