--- a/bikeBros/src/app/pages/main/profile-options/profile-options.page.scss
+++ b/bikeBros/src/app/pages/main/profile-options/profile-options.page.scss
@@ -3,15 +3,18 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-left: 90px;
+  // padding-left: 90px;
 }
 
 .img-container ion-avatar {
   width: 120px;
   height: 120px;
+  margin: auto;
 }
 
 .info {
+  white-space: normal;
+
   padding-left: 10px;
 }
 
@@ -22,4 +25,8 @@
   padding-bottom: 10px;
   border-bottom: 1px solid white;
   color: white;
+}
+
+.icon {
+  width: 30px;
 }
