--- a/bikeBros/src/app/pages/public-profile/public-profile.page.scss
+++ b/bikeBros/src/app/pages/public-profile/public-profile.page.scss
@@ -10,3 +10,16 @@
   color: white;
   border-bottom: 1px solid white;
 }
+.img-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  // padding-left: 100px;
+}
+
+.img-container ion-avatar {
+  width: 120px;
+  height: 120px;
+  margin: auto;
+}
