--- a/bikeBros/src/app/components/fav-list/fav-list.component.scss
+++ b/bikeBros/src/app/components/fav-list/fav-list.component.scss
@@ -13,3 +13,9 @@
   height: 100%;
   object-fit: cover; /* Ajusta la imagen al contenedor sin deformarla */
 }
+
+.no-favs-message {
+  text-align: center;
+  font-size: large;
+  padding-top: 20px;
+}
