--- a/bikeBros/src/app/components/joined-events-list/joined-events-list.component.html
+++ b/bikeBros/src/app/components/joined-events-list/joined-events-list.component.html
@@ -78,6 +78,8 @@
   </ion-content>
 
   <ng-template #noEventsMessage>
-    <div class="no-events-message">No estás inscrito a ningún evento.</div>
+    <div class="no-events-message">
+      No estás inscrito a ningún evento en este momento.
+    </div>
   </ng-template>
 </ion-content>
